Title/heading revision

--- a/Exceptions.ipynb
+++ b/Exceptions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hack Python exception"
+    "# Python exception"
    ]
   },
   {
